---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Update circuit connector
    - Give the control behavior a texture
    - Fix circuit connector being drawn under the engine
    - Align the circuit connections with the sprite
    - Just listen to all the events in case of editor/character building
    - Remove the connector when the thruster dies
    - Support adopting an upgraded/ghost thruster
    - Fix thruster control behavior finder using the wrong position
    - Prevent control behavior ghosts existing without a thruster
    - Allow the control behavior to only exist at its exact thruster offset
    - If the thruster is a ghost, make a ghost connector
    - When the thruster dies, kill the connector
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 17
  Info:
    - Initial commit