@@ -14,6 +14,7 @@ Date: ????
     - Allow the control behavior to only exist at its exact thruster offset
     - If the thruster is a ghost, make a ghost connector
     - When the thruster dies, kill the connector
+    - And when a thruster gets revived, revive the control behavior too
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 17
